--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2225,7 +2225,8 @@ h6 {
 @media (min-width: 1281px) {
   .main-menu .main-menu__list > li + li,
   .stricky-header .main-menu__list > li + li {
-    margin-left: 70px;
+    margin-left: 55px;
+    margin-right: 10px;
   }
 }
 
@@ -2242,7 +2243,7 @@ h6 {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  color: #9e9e9e;
+  color: #ffffff;
   -webkit-transition: 500ms;
   transition: 500ms;
   cursor: pointer;
@@ -2908,7 +2909,7 @@ h6 {
 .main-header__two .main-menu__list {
   background-color: var(--thm-black);
   width: calc(100% - 223px);
-  padding-left: 20px;
+  padding-left: 30px;
   padding-right: 10px;
 }
 
